--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Widget test</title>
 </head>
 <body>
-<div style="width: 360px">
-    <weather-widget/>
-</div>
+<weather-widget/>
 <script src="js/app.js" data-api-key="46422dedb7c29eb8cdfa9b7f2a819427" data-lang="ru" widget-selector="weather-widget"></script>
 </body>
 </html>
