testing: update test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>Widget test</title>
 </head>
 <body>
-<weather-widget/>
+<div style="width: 360px">
+    <weather-widget/>
+</div>
 <script src="js/app.js" data-api-key="46422dedb7c29eb8cdfa9b7f2a819427" data-lang="ru" widget-selector="weather-widget"></script>
 </body>
 </html>
