testing: update test

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 <div style="width: 360px">
-    <weather-widget/>
+    <my-own-widget></my-own-widget>
 </div>
-<script src="js/app.js" data-api-key="46422dedb7c29eb8cdfa9b7f2a819427" data-lang="ru" widget-selector="weather-widget"></script>
+<script src="js/app.js" data-api-key="46422dedb7c29eb8cdfa9b7f2a819427" data-lang="ru" data-widget-selector="my-own-widget"></script>
 </body>
 </html>
