testing: update test

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Widget test</title>
 </head>
 <body>
-<div style="max-width: 360px">
+<div style="max-width: 375px; margin: 0 auto">
     <my-own-widget></my-own-widget>
 </div>
 <script src="js/app.js" data-api-key="46422dedb7c29eb8cdfa9b7f2a819427" data-lang="ru" data-widget-selector="my-own-widget"></script>
