--- a/index.html
+++ b/index.html
@@ -1,16 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Widget test</title>
-</head>
-<body>
-<div style="max-width: 375px; margin: 0 auto">
-    <my-own-widget></my-own-widget>
-</div>
-<script src="js/app.js" data-api-key="46422dedb7c29eb8cdfa9b7f2a819427" data-lang="ru" data-widget-selector="my-own-widget"></script>
-</body>
-</html>
+<!doctype html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="/favicon.ico"><title>elastoo-test</title><script defer="defer" src="/js/chunk-vendors.5ed04d63.js"></script><script defer="defer" src="/js/app.38fd9863.js"></script><link href="/css/chunk-vendors.8062c7c9.css" rel="stylesheet"><link href="/css/app.627148b9.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but elastoo-test doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div></body></html>
